# eigen-avs-ai-example

./: .gitmodules  Cargo.toml  Dockerfile  build.rs  foundry.toml  remappings.txt
contracts/src/: GithubTasks.sol  TangleServiceManager.sol  TaskManager.sol
src/: lib.rs  llm.rs  main.rs
src/apis/: github.rs
src/jobs/: github.rs
