[package]
name = "eigen-ai-avs-example"
version = "0.1.0"
edition = "2021"
description = "A Tangle Blueprint for AI Agent tasks"
authors = ["Drew Stone <drewstone329@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/eigen-ai-avs-example"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
# Gadget
blueprint-sdk = { git = "https://github.com/tangle-network/gadget.git", default-features = false, features = ["std", "eigenlayer", "evm", "macros", "build"] }
octocrab = "0.43.0"
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
base64 = "0.21.7"
thiserror = "1.0.57"
rig-core = "0.9.0"
rustls = { version = "0.23.23", features = ["ring"] }
once_cell = "1.19.0"
chrono = "0.4.40"
serde_json = "1.0.139"


[build-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget.git", default-features = false, features = ["std", "build"] }

[features]
default = ["std"]
std = ["blueprint-sdk/std"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "eigen-ai-avs-example"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "TangleTaskManager" }

[[package.metadata.gadget.Native.sources]]
owner = "tangle-network"
repo = "eigen-ai-avs-example"
tag = "0.1.0"
binaries = [
    { arch = "Amd64", os = "Linux", name = "amd64-linux-eigen-ai-avs-example-gadget" },
    { arch = "Arm64", os = "Linux", name = "arm64-linux-eigen-ai-avs-example-gadget" },
]
